add real fourth entry

--- a/pages/fourth-entry.html
+++ b/pages/fourth-entry.html
@@ -1,13 +1,112 @@
 <!DOCTYPE html>
-<html>
-  <head>
-			<title>I've Marketed Myself As a Strange Storyteller... - Blog | Rosie Ilene</title>
+	<html>
+		<head>
+			<title>- I've Marketed Myself As a Strange Storyteller... - Blog | Rosie Ilene</title>
 			<link type="text/css" rel="stylesheet" href="/stylesheets/main.css"/>
 			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 		</head>
-  
-  <body>
-    <h1 style="font-size:96px; text-align:center">Soon.</h1>
-    <h2 style="text-align:center"> Available Monday, March 27th, 2017</h2>
-  </body>
-               </html>
+		
+		<body> 
+			<style>
+				body {background-color:#C9E5F0}
+				h1, h2, h3, p, b, i {font-family:verdana}
+				img {
+					border-collapse: collapse;}
+					a:link {text-decoration:none}
+				table, tr, th {padding:3px;}
+			</style>
+		
+		<div class="pageDiv">
+			<h1 style=text-align:center>Blog</h1>
+		</div>
+			<hr>
+			
+		<div style="padding: 0px 75px 0px 75px" class="entry4">
+			<br>
+				<h2 style=color:indigo>I have had many moments where...</h2>
+					<p>March 27th, 2017</p>
+						<video width="500" height="340" controls>
+							<source src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/videos/blog+1+vid+4.mp4" type="video/mp4">
+							<source src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/videos/blog+1+vid+4.mp4" type="video/ogg">
+							<track src="subtitles_en.vtt" kind="subtitles" srclang="en" label="English">
+							<track src="subtitles_es.vtt" kind="subtitles" srclang="es" label="Spanish">
+						</video>
+							<p><strong>Transcript:</strong> Oh, look! I'm doing my eyebrows today.</p>
+							<p>Where I was convinced I didn't need to improve on a skill because I had it <i>down</i>. 
+							<br>
+							I knew to use good lighting and natural lighting works best since I was working with makeup. 
+							I got my supplies set up on the kitchen table, opened the curtains 
+							and sat down at the table. I recommend facing the sun so people can see what's on your face. 
+							<br>
+							I've seen people do the opposite. 
+							<br>
+							Please don't replicate this mistake. Face the sun so we can see your beautiful face.
+								<br>
+									The following pics courtesy of my cell phone.</p>
+										<hr>
+											<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic1.jpg" height="600px" width="460px" alt="Pic 1">
+											<p>Alright, I started by filling in my right brow. Looking pretty good!</p>
+											<br>
+												<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic2.jpg" height="600px" width="460px" alt="Pic 2">
+												<p>Left brow done.</p>
+												<br>
+													<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic3.jpg" height="600px" width="460px" alt="Pic 3">
+													<p>Not bad, not bad. I hope you don't mind a little flaunting.</p>
+													<br>
+														<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic4.jpg" height="600px" width="460px" alt="Pic 4">
+														<p>And a little eyebrow raise.</p>
+														<br>
+															<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic5.jpg" height="600px" width="460px" alt="Pic 5">
+															<p>Hold on, something isn't right. I put my left brow back down and these pups still look crooked.</p>
+															<br>
+																<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic6.jpg" height="600px" width="460px" alt="Pic 6">
+																<p>So, I'm staring at myself in the mirror again, contemplating which hairs to pluck and trim away from my right brow. Which
+																specific area should I choose as a starting point to make this one match her sister?</p>
+																<br>
+																	<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic7.jpg" height="600px" width="460px" alt="Pic 7">
+																	<p>Aha! I got it. I know what to do.</p>
+																	<br>
+																		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic8.jpg" height="600px" width="460px" alt="Pic 8">
+																		<p>Gonna give this another try.</p>
+																		<br>
+																			<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic9.jpg" height="600px" width="460px" alt="Pic 9">
+																			<p>Take 2. Better, but the match-up is still a little off.</p>
+																			<br>
+																				<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic_10.jpg" height="600px" width="460px" alt="Pic 10">
+																				<p>But I'm liking what I see.</p>
+																				<br>
+																					<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic_11.jpg" height="600px" width="460px" alt="Pic 11">
+																					<p>More selfies with the new brow because it's such a confidence booster.</p>
+																					<br>
+																						<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic_12.jpg" height="600px" width="460px" alt="Pic 12">
+																						<p>And at this point, I'm judging the newly-shaped brow in the mirror again.</p>
+																						<br>
+																							<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic_13.jpg" height="600px" width="460px" alt="Pic 13">
+																							<p>One more before I change it again. Y'all ready?</p>
+																							<br>
+																								<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic_14.jpg" height="600px" width="460px" alt="Pic 14">
+																								<p>Take 3. Though they're not perfectly symmetical, the process is complete. (Nobody's brows are perfectly symmetrical, there's
+																								no need to worry if one looks a little loppier than the other.)</p>
+																								<br>
+																									<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4pic_16.jpg" height="600px" width="460px" alt="Pic 15">
+																									<p>Thank you everybody for watching. Click on this <a href="https://www.instagram.com/p/BSDNdB_D5Qa/" target="_blank">link</a> to check out the list of tools I used for my brows.
+																									<br>
+																									I can easily be found on Insta and Twitter.</p>
+										<video width="700" height="550" controls>
+										<source src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/videos/blog4vid2.mp4" type="video/mp4">
+										<source src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/videos/blog4vid2.mp4" type="video/ogg">
+										<track src="subtitles_en.vtt" kind="subtitles" srclang="en" label="English">
+										<track src="subtitles_es.vtt" kind="subtitles" srclang="es" label="Spanish">
+										</video>
+											<p>Please excuse the stuttering, I was a little nervous.</p>
+											<p>Stay tuned for frequent updates and thank you again for watching. *Beso!*</p>
+			
+		</div>
+		</body>
+		<br>
+		<hr>
+			<footer style="padding: 0px 75px 15px 75px">
+				<p>Created by: Rosie Ilene</p>		
+				<p style=text-align:left><a href="third-entry.html">Previous</a></p> <!--<p style=text-align:right><a href="fifth-entry.html"></a></p>-->
+			</footer>
+	</html>              
