--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,45 +22,52 @@
 </div>
 <hr>
 <div class="blogEntry">
+<h2><a href="pages/fourth-entry.html" target="_blank">I've Marketed Myself As a Strange Storyteller...</a></h2>
+	<h3>Now let me show you.</h3>
+				<p>March 24th, 2017</p>
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/blog4title.jpg" height="320px" width="450px">
+			<p>In a story about eyebrows. <a href="pages/fourth-entry.html" target="_blank">Read more...</a></p>
+</div>
+<br>
+<hr>
+
+<div class="blogEntry">
 <h2><a href="pages/third-entry.html" target="_blank">I Removed the "Comics" Tab...</a></h2>
 	<h3>And placed malicealicemartin.com under construction.</h3>
 				<p>March 6th, 2017</p>
-	<div class="titleImage3">
-		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/I3_P1_blog_pic.jpg" height="200px" width="300px">
-		</div>
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/I3_P1_blog_pic.jpg" height="300px" width="420px">
 			<p>If you've been with me since the days my comics were about <a href="https://www.instagram.com/malicemartin13" target="_blank">two weirdly-drawn clowns/pierrot dolls</a>, you might already be familiar with 
 			<a href="http://www.malicealicemartin.com" target="_blank">malicealicemartin.com.</a> If you're new, I'd like to welcome you to... <a href="pages/third-entry.html" target="_blank">Read more...</a></p>
 </div>
-<hr>
 <br>
+<hr>
+
 <div class="blogEntry">
 <h2><a href="pages/second-entry.html" target="_blank">My Message for 2017</a></h2>
 	<h3>Protect each other. Keep each other safe.</h3>
 		<p>Started January 20th, 2017</p>
-			<div class="titleImage2">
-				<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Indian-christmas-card.jpg" width="300px" height="200px" 
+				<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Indian-christmas-card.jpg" height="300px" width="420px" 
 							alt="Indian Christmas card">
-			</div>
 	<p>Today is the day we take a stand against harmful and willfully ignorant...<a href="pages/second-entry.html">Read more...</a></p>
 </div>
-	<hr>
 	<br>
+	<hr>
+	
 <div class="blogEntry">
 	<h2><a href="pages/first-entry.html" target="_blank">First Entry</a></h2>
 		<h3>Elegant cards drawn by hand.</h3>
 			<p>December 30th, 2016</p>
-				<div class="titleImage">
-					<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/my-first-card.jpg" height="200px" width="300px">
-				</div>
-				
+					<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/my-first-card.jpg" height="300px" width="420px">
 				<p>Hey, everyone! I just wanted to show off my very first blog post, something I have always wanted to do
 					but didn't know where to begin, until now. I thought to myself, "How could I make my first post this good?"
 					"What could I post to kick this website off with a bang?" How about...? <a href="pages/first-entry.html" target="_blank">Read more...</a>
 </div>
 <hr>
 </body>
-<footer>
-<p>Everything created by Rosie Ilene on Github.</p>
-<p><a href="index.html">Back to home page</a></p>
-</footer>
+<div class="footerblog">
+	<footer>
+		<p>Everything created by Rosie Ilene on Github.</p>
+		<p><a href="index.html">Back to home page</a></p>
+	</footer>
+</div>
 </html>
