--- a/pages/fourth-entry.html
+++ b/pages/fourth-entry.html
@@ -98,8 +98,12 @@
 										<track src="subtitles_en.vtt" kind="subtitles" srclang="en" label="English">
 										<track src="subtitles_es.vtt" kind="subtitles" srclang="es" label="Spanish">
 										</video>
-											<p>Please excuse the stuttering, I was a little nervous.</p>
-											<p>Stay tuned for frequent updates and thank you again for watching. *Beso!*</p>
+											<p><strong>Transcript:</strong>Alright, there you go! My eyebrows may be two different colors right now but at least
+										they match. And I like it. Admittingly, I was reluctant to change it because I thought it looked good already. I'm so glad
+										I took the step to actually change it instead of just sticking to what I thought was perfect, you know? But yeah, I like it. </p>
+												<p>Please excuse the stuttering, I was a little nervous. But yeah, I like it.</p>
+													<p>Stay tuned for frequent updates and thank you again for watching. *Beso!*</p>
+											
 			
 		</div>
 		</body>
